Refactor: API Find Event
