# src/controllers/event.controller.ts
@@ -1,8 +1,8 @@
 import { Response } from "express";
-import { IPaginationQuery, IReqUser } from "../utils/interfaces";
-import EventModel, { Event, eventDAO } from "../models/eventModels";
+import { IReqUser } from "../utils/interfaces";
+import EventModel, { Event, eventDAO, TypeEvent } from "../models/eventModels";
 import response from "../utils/response";
-import { isValidObjectId } from "mongoose";
+import { isValidObjectId, QueryFilter } from "mongoose";
 
 export default {
   async create(req: IReqUser, res: Response) {
@@ -16,25 +16,40 @@ export default {
     }
   },
   async findAll(req: IReqUser, res: Response) {
-    const {
-      limit = 10,
-      page = 1,
-      search,
-    } = req.query as unknown as IPaginationQuery;
     try {
-      const query = {};
-      if (search) {
-        Object.assign(query, {
-          ...query,
-          $text: {
-            $search: search,
-          },
-        });
-      }
+      const buildQuery = (filter: any) => {
+        let query: QueryFilter<Event> = {};
+
+        if (filter.search) query.$text = { $search: filter.search };
+        if (filter.category) query.category = filter.category;
+        if (filter.isOnline) query.isOnline = filter.isOnline;
+        if (filter.isPublish) query.isPublish = filter.isPublish;
+        if (filter.isFeatured) query.isFeatured = filter.isFeatured;
+
+        return query;
+      };
+
+      const {
+        limit = 10,
+        page = 1,
+        search,
+        category,
+        isOnline,
+        isFeatured,
+        isPublish,
+      } = req.query;
+
+      const query = buildQuery({
+        search,
+        category,
+        isPublish,
+        isFeatured,
+        isOnline,
+      });
 
       const result = await EventModel.find(query)
-        .limit(limit)
-        .skip((page - 1) * limit)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
         .sort({ createdAt: -1 })
         .exec();
 
@@ -43,9 +58,9 @@ export default {
         res,
         result,
         {
-          current: page,
+          current: +page,
           total: count,
-          totalPages: Math.ceil(count / limit),
+          totalPages: Math.ceil(count / +limit),
         },
         "Success to find all an event"
       );
